extends Node2D

@onready var shot1 = $shot1
@onready var shot2 = $shot2
@onready var shot3 = $shot3
# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
